DO-1331 && DO-1341 fix align blocks

--- a/src/scss/components/_link.scss
+++ b/src/scss/components/_link.scss
@@ -4,14 +4,28 @@
     font-style: normal;
     font-size: 16px;
     display: inline-flex;
+    cursor: pointer;
     
     &_end {
         color:white;
         padding-bottom: 7%;
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+
+        a:hover{
+            color: #B6D7FF;
+        }
+
+        a:active {
+            color: white;
+        }
     }
 }
 
-.link_end:hover {
+.link_end:hover{
     // text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
     color: #B6D7FF;
     transition: 0.25s;
