--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -13,10 +13,6 @@
         h1 {
             width: 520px;
         }
-
-        nav {
-            display: contents;
-        }
     }
 
     @media (max-width: $md) {
